[project]
name = "llm-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "QingGo", email = "zyqingjohn@qq.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=4.4.2",
    "datasketch>=1.8.0",
    "fasttext>=0.9.3",
    "langid>=1.1.6",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0.3",
    "ray[data]<=2.49.2",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.11",
    "tiktoken>=0.12.0",
    "transformers>=4.57.3",
    "warcio>=1.7.5",
    "xxhash>=3.6.0",
    "spacy==3.8.11",
    "en-core-web-sm==3.8.0",
    "zh-core-web-sm==3.8.0"
]

[tool.uv.sources]
# 强制从官方 release wheel 安装，绕开 PyPI 上的 zh_core_web_sm stub 包
"en-core-web-sm" = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
"zh-core-web-sm" = { url = "https://github.com/explosion/spacy-models/releases/download/zh_core_web_sm-3.8.0/zh_core_web_sm-3.8.0-py3-none-any.whl" }

[project.scripts]
llm-data-pipeline = "llm_data_pipeline:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
# 让 python -m pip 可用（解决 No module named pip）
dev = [
    "isort>=7.0.0",
    "modelscope>=1.33.0",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
    "pip"
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# I = import sorting（等价 isort 的核心能力）

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
